@@ -22,6 +22,8 @@ and Trevor Harmon for contributing to this release.
 
 - Updated D syntax highlighting (Jim Lawton).
 
+- Forth syntax highlighting.
+
 }}}
 {{{ Miscellaneous
 
